docs/Authorino-external-lookup/security-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: external-auth
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: envoy-ai-gateway-basic
  extAuth:
    grpc:
      backendRef:
        name: authorino-authorino-authorization
        namespace: auth
        port: 50051
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-envoy-gateway-to-authorino
  namespace: auth
spec:
  from:
    - group: gateway.envoyproxy.io
      kind: SecurityPolicy
      namespace: default
  to:
    - group: ""
      kind: Service
      name: authorino-authorino-authorization
